# shs-network-config

./: .gitignore  Jenkinsfile.aarch64  Jenkinsfile.x86_64  Makefile.am  README.md  autogen.sh  build.sh  configure.ac  run.jenkins  run.local  runBuildPrep.sh  slingshot-network-config.spec
.github/: CODEOWNERS
config/: Makefile.am
config/dracut/96-slingshot-network-lldp/: module-setup.sh
config/dracut/99-slingshot-network-modprobe/: module-setup.sh
config/dracut/99-slingshot-network-udev/: module-setup.sh
config/limits/: 99-slingshot-network.conf
config/modprobe/: 99-slingshot-network.conf
config/sysctl/: 99-slingshot-network.conf
config/udev/: 99-slingshot-network.rules
include/: debug.h  tlv.h  utils.h  validation.h
src/: Makefile.am  debug.c  slingshot-network-cfg-lldp.c  tlv.c  utils.c  validation.c
test/: Makefile.am  common.sh  test-bad-local-state  test-malformed-oui  test-missing-oui  test-no-output  test-success
test/mock-cases/: malformed-oui.infile  missing-oui.infile  success.infile
