nobase_dist_pkgdata_DATA = dracut/99-slingshot-network-modprobe/module-setup.sh \
    dracut/99-slingshot-network-udev/module-setup.sh \
    dracut/96-slingshot-network-lldp/module-setup.sh \
    limits/99-slingshot-network.conf \
    modprobe/99-slingshot-network.conf \
    sysctl/99-slingshot-network.conf \
    udev/99-slingshot-network.rules
